--- a/optimization_params.yaml
+++ b/optimization_params.yaml
@@ -1,14 +1,14 @@
 # Description: Optimization parameters for the drone trajectory optimization
 
 # Optimization Parameters
-n_iterations: 11 # Number of optimization iterations
+n_iterations: 150 # Number of optimization iterations
 optimization_random_state: 4634 # Random state for optimization
 
 # World Parameters
 grid_size: 10 # Grid size (in meters) This determines the areas where the noise effect is calculated
 max_world_size: 1000 # Maximum world size (in meters)
 grid_step: 7 # Grid discretization step (in meters) for searching coordinates during optimization
-world_file_name: world_palermo.pkl # World file name
+world_file_name: world_winterthur.pkl # World file name
 
 # Drone Parameters
 drone_model_name: "DJI Matrice 300 RTK" # Drone model name
@@ -25,5 +25,5 @@ noise_model: "dnn_sound_model/angles_swl.npy" # Noise model file name
 num_points: 7 # Number of intermediate points
 perturbation_factor: 0.25 # Perturbation factor for the maximum offset starting from the distance between A and B
 enforce_monotonic_xy: True # Enforce monotonicity in x and y coordinates
-A: {"x": 0, "y": 0, "z": 100, "h_speed": 20, "v_speed": 8} # Starting Point A
-B: {"x": 1000, "y": 1000, "z": 100, "h_speed": 20, "v_speed": 8} # Ending Point B
+A: [{"x": 0, "y": 0, "z": 100, "h_speed": 20, "v_speed": 8}, {"x": 0, "y": 500, "z": 100, "h_speed": 20, "v_speed": 8}] # Starting Point A
+B: [{"x": 1000, "y": 1000, "z": 100, "h_speed": 20, "v_speed": 8}, {"x": 1000, "y": 0, "z": 100, "h_speed": 20, "v_speed": 8}] # Ending Point B
